exploitation/k8s/acme2certifer/dev-demoacme2certifier-lan/03-ing-demoacme2certifier-front.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-demoacme2certifier-default
  namespace: dev-demoacme2certifier-lan
  labels:
      environment: dev
      network: lan
      application: demoacme2certifier
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    ingressClassName: traefik-lan
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik-lan
  tls:
  - hosts:
    - url.dusite.pourlademo
    secretName: sec-certificate-demoacme2certifier
  rules:
  - host: url.dusite.pourlademo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-demoacme2certifier-front
            port:
              number: 80
